# C_Lessons

./: .gitignore  CMakeLists.txt  Exercises.md  README.md  conta_cifre.c  conta_primi.c  esercizi.txt  numeri_perfetti.c  solutions.md  sommatoria.c
ASCII/: ascii  ascii.c
Cicli e selezione/: conta_cifre.c  conta_in_due_sensi  conta_in_due_sensi.c  conta_primi.c  containv  numeri_perfetti.c
alberi/: albero.c
cicli/: a.out  cicli  cicli.c  genera  genera_numeri_primi.c  triangolo  triangolo-croce  triangolo-croce.c  triangolo.c
esercizi/: binom.c  es-2  es-2.c  primi  primi.c  punti-segmento  punti-segmento.c  sette-mezzo.c  testi.txt  val_data  val_data.c
file/: input.txt  libro.txt  read.c  write.c  write_and_read.c  write_and_read_2.c
funzioni/: coffee.c  euclide  euclide.c  fibo  fibonacci.c  funz  funz-cubo  funz-cubo.c  funz-somma  funz-somma.c  funz-void.c  funz.c  stampa-div  stampa-div.c  tabellina  tabellina.c  testo  var-globali  var-globali.c
giochi/: battilo.c  frequenza  frequenza.c  monopoli  monopoli.c  palindromo  palindromo.c  senza-rip  senza-rip.c
io/: hello  read_all._types.c  read_var  read_var.c
liste/: expenses.csv  list-append  list-append.c  list-exercise-1  list-exercise-1.c  list-exercise-2  list-exercise-2.c  list-sorted.c  lista.c  tempCodeRunnerFile.c
matrici/: main.c
serie/: serie-a  serie-a.c  verifica
stringhe/: password.c
successioni/: radice-quadrata  radice-quadrata-di-a  radice-quadrata-di-a.c  radice-quadrata.c
threads/: boss_worker  boss_worker.c  mutex  mutex.c  no_threads  no_threads.c  producer_consumer  (+5 more)
(+2 files in other folders)
